--- a/package.json
+++ b/package.json
@@ -8,23 +8,31 @@
     "dev": "vite",
     "build": "vite build && cp renderer/audio-processor.js dist/",
     "start": "npm run build && electron .",
-    "electron": "electron ."
+    "electron": "electron .",
+    "generate-icons": "node scripts/generate-icons.js"
   },
-  "keywords": ["electron", "openai", "realtime", "translator", "speech-to-text"],
+  "keywords": [
+    "electron",
+    "openai",
+    "realtime",
+    "translator",
+    "speech-to-text"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^28.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.12",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "electron": "^28.0.0",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17"
+    "sharp": "^0.34.5",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.12"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "lucide-react": "^0.312.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "lucide-react": "^0.312.0"
+    "react-dom": "^18.2.0"
   }
 }
